# BeQuite

./: .commitlintrc.json  .dockerignore  .env.example  .gitignore  AGENTS.md  BEQUITE_BOOTSTRAP_BRIEF.md  BeQuite_MASTER_PROJECT.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  commands.md  docker-compose.yml  package.json
.bequite/: MEMORY_INDEX.md
.bequite/audits/: ALPHA_22_POST_RELEASE_STABILIZATION_AUDIT.md  COMMAND_CLASSIFICATION_AUDIT.md  COMMAND_CLUTTER_REVIEW.md  COMMAND_NAVIGATION_AND_CAPABILITY_CONSOLIDATION_AUDIT.md  COMMAND_SKILL_BEST_PRACTICE_AUDIT.md  COMMAND_SKILL_CONSISTENCY_AUDIT.md  COMMAND_SKILL_OUTPUT_QUALITY_MATRIX.md  CONFIDENCE_CALIBRATION_REPORT.md  CROSS_AGENT_COMPATIBILITY_AUDIT.md  DELEGATE_REVIEW_REPORT.md  DIRECTION_RESET_AUDIT.md  DRIFT_VERIFICATION_POST_ORCHESTRATION.md  DUPLICATION_AND_CONFLICT_AUDIT.md  FABLE_5_FOLLOWUP_AUDIT.md  FABLE_5_WORKFLOW_STRENGTHENING_AUDIT.md  FEATURE_WORKFLOW_AUDIT.md  FINAL_SYSTEM_ALIGNMENT_REPORT.md  FRONTEND_SKILL_INTEGRATION_AUDIT.md  FULL_SYSTEM_ALIGNMENT_AUDIT.md  GENERIC_OUTPUT_RISK_AUDIT.md  GITHUB_READY_CLEANUP_AUDIT.md  GUARD_PASS_REPORT.md  HIGH_RISK_COMMAND_HARDENING_AUDIT.md  LEGACY_SKILL_FOLDER_AUDIT.md  OKAY_COMMAND_TIGHTENING_AUDIT.md  P1_SKILL_PATCH_AUDIT.md  SCRAPING_AUTOMATION_CONTEXT_AUDIT.md  SKILL_AUDIT_ALPHA_22_BASELINE.md  SKILL_QUALITY_AUDIT.md  VERIFY_REPORT.md  VISUAL_QA_REPORT.md  WORKFLOW_GATE_AUDIT.md
.bequite/automation/: README.md
.claude/: settings.json.example  settings.windows.json.example
cli/: README.md  pyproject.toml
cli/bequite/: __init__.py  __main__.py  audit.py  auth.py  auto.py  auto_state.py  commands.py  config.py  cost_ledger.py  exporters.py  freshness.py  hooks.py  multi_model.py  pricing.py  receipts.py  receipts_signing.py  router.py  skill_install.py  skill_loader.py  verify.py
cli/bequite/providers/: __init__.py  anthropic.py  deepseek.py  google.py  manual_paste.py  ollama.py  openai.py
docs/: AUTONOMOUS-MODE.md  HOSTS.md  INSTALL.md  MAINTAINER.md  QUICKSTART.md
evidence/: README.md
examples/: README.md
prompts/: discovery_prompt.md  implementation_prompt.md  master_prompt.md  recovery_prompt.md  research_prompt.md  review_prompt.md  stack_decision_prompt.md
scripts/: _tmp_a23_final.py  _tmp_c11_wiring.py  bootstrap.ps1  bootstrap.sh  docker-up.ps1  docker-up.sh  install-bequite.ps1  install-bequite.sh  install.ps1  install.sh
skill/: README.md  SKILL.md  routing.json
state/: current_phase.md  decision_index.json  evidence_index.json  project.yaml  recovery.md  task_index.json
studio/: README.md
studio/api/: README.md  (+5 more)
template/: AGENTS.md.tpl  HANDOFF.md.tpl
(+564 files in other folders)
